[package]
name = "dyn-comp-interaction"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Commercial License"
authors = { workspace = true }

[features]
default = []
specta_support = [
    "dep:serde",
    "dep:specta",
    "dyn-comp-bundles/specta_support",
    "dyn-attributed-string/specta_support",
    "smol_str/serde",
]
tracing = []

[dependencies]
dyn-comp-bundles = { path = "../comp_bundles" }
dyn-attributed-string = { path = "../attributed_string" }
dyn-comp-core = { path = "../comp_core" }
dyn-utils = { path = "../utils" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_hierarchy = { workspace = true }
bevy_transform = { workspace = true }
glam = { workspace = true }
web-time = "1.1.0"
smallvec = { workspace = true }
smol_str = "0.2.1"

# Logging
log = { workspace = true }

# specta_support (feature)
specta = { workspace = true, features = [
    "serde",
    "glam",
    "bevy_ecs",
], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
