[package]
name = "dyn_composition"
version = "0.0.1"
edition = "2021"
description = "Composition"
homepage = "https://s.dyn.art/github"
repository = "https://github.com/dyndotart/monorepo"
license = "AGPL-3.0-or-later"
authors = ["@bennoinbeta"]

[features]
default = []
# Enables functionality for resolving URLs. This feature includes `reqwest`
# as a dependency, allowing the application to fetch resources from the web.
resolve-url = ["dep:reqwest"]
# Adds interactive elements to the Composition. This feature is used to
# enhance user interactivity in environments where interactive components
# should be supported.
interactive = []
tracing = []

[dependencies]
dyn_bevy_render_skeleton = { path = "../bevy_render_skeleton" }
bevy_ecs = "0.12"
bevy_app = "0.12"
bevy_hierarchy = "0.12"
serde = { version = "1.0.189", features = ["derive"] }
glam = { version = "0.24.2", features = ["serde"] }
log = "0.4.20"
specta = { version = "2.0.0-rc.7", features = [
    "typescript",
    "serde",
    "glam",
    "bevy_ecs",
    "functions",
] }
rustybuzz = "0.11.0"
owned_ttf_parser = "0.20.0"
reqwest = { version = "0.11.23", features = ["blocking"], optional = true }
