[package]
name = "dyn-fonts-book"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
tracing = []

[dependencies]
dyn-utils = { path = "../utils" }
fontdb = "0.16.0"
rustybuzz = "0.13.0"
self_cell = "1.0.3"

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11.3"
