[package]
name = "dyn-fonts-book"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
serde_support = ["dep:serde", "dep:specta", "dyn-utils/serde_support"]
tracing = []

[dependencies]
dyn-utils = { path = "../utils" }
fontdb = "0.16.0"
rustybuzz = "0.13.0"
self_cell = "1.0.3"

# serde_support (feature)
specta = { workspace = true, features = ["serde"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
