[package]
name = "dyn-fonts-book"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
specta_support = ["dep:serde", "dep:specta", "dyn-utils/specta_support"]
utoipa_support = ["dep:utoipa", "dyn-utils/utoipa_support"]
tracing = []

[dependencies]
dyn-utils = { path = "../utils" }
fontdb = "0.18.0"
rustybuzz = "0.14.0"
self_cell = "1.0.4"

# specta_support (feature)
specta = { workspace = true, features = ["serde"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

# utoipa_support (feature)
utoipa = { workspace = true, optional = true }

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
