[package]
name = "dyn_svg_render"
version = "0.0.1"
description = "SVG rendering functionality for Composition"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
tracing = []
output-event = []

[dependencies]
dyn_bevy_render_skeleton = { path = "../bevy_render_skeleton" }
dyn_composition = { path = "../composition" }
bevy_ecs = "0.12.1"
bevy_app = "0.12.1"
bevy_hierarchy = "0.12.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_with = "3.4.0"
glam = { version = "0.24.2", features = ["serde"] }
log = "0.4.20"
specta = { version = "2.0.0-rc.7", features = [
    "typescript",
    "serde",
    "glam",
    "bevy_ecs",
    "functions",
] }
base64 = "0.21.7"
