[package]
name = "dyn-utils"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = ["serde_support"]
serde_support = ["dep:serde", "dep:specta"]
tracing = []

[dependencies]
glam = { workspace = true }

# serde_support (feature)
specta = { workspace = true, features = ["serde", "glam"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11.3"
