[package]
name = "dyn-utils"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
specta_support = ["dep:serde", "dep:specta"]
utoipa_support = ["dep:utoipa"]
tracing = []

[dependencies]
glam = { workspace = true }

# specta_support (feature)
specta = { workspace = true, features = [
    "serde",
    "glam",
    "function",
], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

# utoipa_support (feature)
utoipa = { workspace = true, optional = true }

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
