[package]
name = "dyn-bevy-render-skeleton"
version = "0.0.1"
description = "Stripped down rendering skeleton for Bevy Engine. Based on `bevy_render`."
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
tracing = []

[dependencies]
bevy_ecs = "0.13.0"
bevy_app = "0.13.0"
bevy_utils = "0.13.0"
bevy_time = "0.13.0"
glam = "0.25.0"
