[package]
name = "dyn-bevy-render-skeleton"
version = "0.0.1"
description = "Stripped down rendering skeleton for Bevy Engine. Based on `bevy_render`."
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
tracing = []

[dependencies]
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_utils = { workspace = true }
bevy_time = { workspace = true }
glam = { workspace = true }
