[package]
name = "dyn-comp"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = ["dtif"]
tracing = []
dtif = ["dep:dyn-dtif", "dyn-comp-types/serde_support"]

[dependencies]
dyn-comp-types = { path = "../comp_types" }
dyn-dtif = { path = "../dtif", optional = true }
bevy_app = "0.13.0"
bevy_ecs = "0.13.0"
bevy_transform = "0.13.0"
glam = "0.25.0"
smallvec = "1.13.1"
