[package]
name = "dyn-comp"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
dtif = ["dep:dyn-dtif", "dyn-comp-types/serde_support"]
tracing = []

[dependencies]
dyn-comp-types = { path = "../comp_types" }
dyn-dtif = { path = "../dtif", optional = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
glam = { workspace = true }
smallvec = { workspace = true }
tiny-skia-path = { workspace = true }
